<resources>
    <string name="app_name">Hello</string>
    <string name="Hello">请输入温度</string>
    <string name="but">Button</string>
    <string name="btn_lable">转化为华氏度</string>
    <string name="result" />
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_label">Reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint_txt">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
</resources>
